package NYT.NScheduler.NProto;

import "yt/core/misc/proto/guid.proto";
import "yt/client/node_tracker_client/proto/node.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqDumpInputContext
{
    required NYT.NProto.TGuid job_id = 1;
    required string path = 2;
}

message TRspDumpInputContext
{ }

message TReqGetJobNode
{
    required NYT.NProto.TGuid job_id = 1;
    optional uint32 required_permissions = 2 [default = 0];
}

message TRspGetJobNode
{
    required NYT.NNodeTrackerClient.NProto.TNodeDescriptor node_descriptor = 1;
}

message TReqAbandonJob
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspAbandonJob
{ }

message TReqPollJobShell
{
    required NYT.NProto.TGuid job_id = 1;
    // Parameters in YSON format.
    required bytes parameters = 2;
}

message TRspPollJobShell
{
    // Result in YSON format.
    required bytes result = 1;
}

message TReqAbortJob
{
    required NYT.NProto.TGuid job_id = 1;
    optional int64 interrupt_timeout = 2;
}

message TRspAbortJob
{ }

////////////////////////////////////////////////////////////////////////////////
